# tragedy_lab

./: .gitignore  README.md  dracor-xml.ipynb  greek-tragedy-by-line.parquet  greek-tragedy-by-line_with-gender.parquet  homer.parquet  homeric-topics_LDA.json  homeric-topics_NMF.json  lab.ipynb  main.py  messenger-sentence-embeddings-similarities.parquet  messenger-topics_LDA.json  messenger-topics_NMF.json  messenger_speeches-with-year.json  messenger_speeches.json  messenger_speeches_updated.json  messenger_speeches_updated_no-satyr-play.json  messengers-embeddings.ipynb  messengers-nlp.ipynb  messengers-over-time.ipynb  messengers.ipynb  messengers_by_play_and_speaker.parquet  messengers_by_play_and_speaker_grouped_text.parquet  messengers_grouped_speeches_embeddings.parquet  preprocess.py  pyproject.toml  ranked_characters.json  ranked_dracor_networks_in_tragedy.csv  ranked_tragedy_speakers_from_dracor.tsv  scratchpad.ipynb  speakers_with_genders.csv  tragedy-and-homer.ipynb  tragedy-by-year.jsonld  tragedy-embeddings.ipynb  tragedy-with-years.parquet  tragedy.parquet  tragic-topics_LDA.json  tragic-topics_NMF.json  ttr.txt  ttr_line_length.txt
conllu/: Aeschylus_Agamemnon_Agamemnon.conllu  Aeschylus_Agamemnon_Aigisthos.conllu  Aeschylus_Agamemnon_Choros.conllu  Aeschylus_Agamemnon_Kasandra.conllu  Aeschylus_Agamemnon_Keryx.conllu  Aeschylus_Agamemnon_Klytaimestra.conllu  Aeschylus_Agamemnon_Phylax.conllu  Aeschylus_Agamemnon_Αἴγισθος.conllu  Aeschylus_Agamemnon_Κασάνδρα.conllu  Aeschylus_Agamemnon_Κλυταιμήστρα.conllu  Aeschylus_Agamemnon_Κῆρυξ.conllu  (+799 more)
(+1983 files in other folders)
