[project]
name = "2024-11-28-tragedy-dfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grecy>=1.0",
    "lxml>=6.0.0",
    "lxml-stubs>=0.5.1",
    "pip>=25.2",
    "polars>=1.32.0",
    "pyconll>=3.2.0",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "tqdm>=4.67.1",
]
