[project]
name = "2024-11-28-tragedy-dfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grecy>=1.0",
    "lxml>=6.0.0",
    "lxml-stubs>=0.5.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "polars>=1.32.0",
    "pyconll>=3.2.0",
    "pydracor>=2.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "spacy>=3.8.7",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.5",
    "python-lsp-server[all,yapf]>=1.13.0",
    "tqdm>=4.67.1",
]
